; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_pop3.c_pop3_setup_connection.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_pop3.c_pop3_setup_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@CURLE_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.connectdata*)* @pop3_setup_connection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @pop3_setup_connection(%struct.connectdata* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.connectdata*, align 8
  %4 = alloca i64, align 8
  store %struct.connectdata* %0, %struct.connectdata** %3, align 8
  %5 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %6 = call i64 @pop3_init(%struct.connectdata* %5)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i64, i64* %4, align 8
  store i64 %10, i64* %2, align 8
  br label %16

11:                                               ; preds = %1
  %12 = load i32, i32* @FALSE, align 4
  %13 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %14 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = load i64, i64* @CURLE_OK, align 8
  store i64 %15, i64* %2, align 8
  br label %16

16:                                               ; preds = %11, %9
  %17 = load i64, i64* %2, align 8
  ret i64 %17
}

declare dso_local i64 @pop3_init(%struct.connectdata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
